# chess-game-cpp

./: README.md
ChessGame/: CMakeLists.txt  format.sh  test_input.sh
ChessGame/src/: main.cpp
ChessGame/src/Board/: Board.cpp  Board.h  CMakeLists.txt  CheckMateTracker.cpp  CheckMateTracker.h  StalemateTracker.cpp  StalemateTracker.h
ChessGame/src/Board/interfaces/: IBoard.h  ICheckMateTracker.h  IStalemateTracker.h
ChessGame/src/Game/: CMakeLists.txt  Game.cpp  Game.h
ChessGame/src/Game/interfaces/: IGame.h
ChessGame/src/Pieces/: Bishop.cpp  Bishop.h  CMakeLists.txt  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  PieceFactory.cpp  PieceFactory.h  PieceManager.cpp  PieceManager.h  PieceUtilities.cpp  PieceUtilities.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
ChessGame/src/Pieces/interfaces/: IPiece.h  IPieceManager.h
ChessGame/src/Utilities/: CMakeLists.txt  InputHandler.cpp  InputHandler.h
